2008-10-26  Daniel Nylander <po@danielnylander.se>

	* sv.po: Updated Swedish translation.

2008-10-24  Maxim Dziumanenko <dziumanenko@gmail.com>

	* uk.po: Updated Ukrainian translation.

2008-10-20  Jorge Gonzalez  <jorgegonz@svn.gnome.org>

	* es.po: Updated Spanish translation.  

2008-10-20  Jordi Mallach  <jordi@sindominio.net>

	* ca.po: Updated Catalan translation.

2008-10-19  Petr Kovar  <pknbe@volny.cz>

	* cs.po: Updated Czech translation.

2008-10-19  Funda Wang  <fundawang@gmail.com>

	* zh_CN.po: Updated zh_CN translation.

2008-10-16  Marcel Telka  <marcel@telka.sk>

	* sk.po: Updated Slovak translation by Pavol Šimo.

2008-10-16  Daniel Nylander <po@danielnylander.se>

	* sv.po: Updated Swedish translation.

2008-10-16  Jorge Gonzalez  <jorgegonz@svn.gnome.org>

	* es.po: Updated Spanish translation.  

2008-10-15  Claude Paroz  <claude@2xlibre.net>

	* fr.po: Updated French translation.

2008-10-14  Nickolay V. Shmyrev  <nshmyrev@yandex.ru>

	* ru.po: Updated Russian translation by 
	Yuriy Penkin.

2008-10-12  Petr Kovar  <pknbe@volny.cz>

	* cs.po: Updated Czech translation by Lucas Lommer.

2008-10-08  Kjartan Maraas  <kmaraas@gnome.org>

	* nb.po: Updated Norwegian bokmål translation.

2008-10-04  Daniel Nylander <po@danielnylander.se>

	* sv.po: Updated Swedish translation.

2008-10-01  Amanpreet Singh Alam <aman@svn.gnome.org>

	* pa.po: Punjabi (pa) Translation added
	* LINGUAS: pa added to list

2008-09-28  Jorge Gonzalez  <jorgegonz@svn.gnome.org>

	* es.po: Updated Spanish translation.

2009-09-27  Gil Forcada  <gforcada@gnome.org>

	* ca.po: Updated Catalan translation.

2008-09-26  Jorge Gonzalez  <jorgegonz@svn.gnome.org>

	* es.po: Updated Spanish translation.

2008-09-23  Gabor Kelemen  <kelemeng@gnome.hu>

	* hu.po: Translation updated.

2008-09-16  Kenneth Nielsen  <k.nielsen81@gmail.com>

	* da.po: Updated Danish translation by Mads P. Rommedahl

2008-09-11  Luca Ferretti  <elle.uca@libero.it>
