@@ -1,3 +1,7 @@
+2008-10-26  Gil Forcada  <gforcada@gnome.org>
+
+	* POTFILES.in: Added back.
+
 2008-10-26  Daniel Nylander <po@danielnylander.se>
 
 	* sv.po: Updated Swedish translation.
